python/test-data/testTypesCollections4.err
Traceback (most recent call last):
  File "test-data/testTypesCollections4.py", line 10, in <module>
    foo([])
  File "test-data/testTypesCollections4.py", line 7, in foo
    res.append(f())
WyppTypeError: got value of wrong type
given:    42
expected: value of type str

context: foo(l: list[Callable[[], str]]) -> list[str]
                                  ^^^
declared at: test-data/testTypesCollections4.py:4
declared at: test-data/testTypesCollections4.py:3
caused by: test-data/testTypesCollections4.py:4
  |     l.append(lambda: 42) # error
caused by: test-data/testTypesCollections4.py:10
  | foo([])
